# mathdistops

./: CHANGELOG.md  CONDUCT.md  CONTRIBUTING.md  CONTRIBUTOR.md  LICENSE  README.md  environment.yaml  pyproject.toml
.github/workflows/: ci-cd.yml
docs/: Makefile  conf.py  example.ipynb  example_exp 2.ipynb  example_exp.ipynb  example_norm.ipynb  index.md  make.bat
docs/source/: modules.rst
src/MathDistOps/: __init__.py  normal_dist_cal.py  pexp.py  pnorm.py  qexp.py  qnorm.py
src/mathdistops/: __init__.py  pexp.py  pnorm.py  qexp.py  qnorm.py
tests/: test_mathdistops.py  test_pexp.py  test_pnorm.py  test_qexp.py  test_qnorm.py
