[tool.poetry]
name = "mathdistops"
version = "2.0.5"
description = "This package provides function for calculating pnorm, qnorm, pexp and qexp."
authors = ["Ziwei Chen, Kun Ya,Sivakorn Oak Chong, Sandra Gross"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
scipy = ">=1.11.4"
matplotlib = ">=3.8.2"
numpy = ">=1.26.3"
pandas = ">=2.1.4"
altair = ">=5.2.0"
palmerpenguins = ">=0.1.4"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.4"
pytest-cov = ">=4.1.0"
palmerpenguins = ">=0.1.4"
myst-nb = {version = ">=1.0.0", python = ">=3.9"}
sphinx-autoapi = ">=3.0.0"
sphinx-rtd-theme = ">=2.0.0"
sphinx = ">=2.4.3"
sphinxcontrib-napoleon = ">=0.7"
numexpr = "^2.8.8"
jupyterlab = "^4.0.12"


[tool.semantic_release]
version_toml = [
    "pyproject.toml:tool.poetry.version",
]                                                    # version location
branch = "main"                                      # branch to make releases of
changelog_file = "CHANGELOG.md"                      # changelog file
build_command = "pip install poetry && poetry build" # build dists

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
